tests/snapshot/error/source_locations/expression/assign/set_named_property.js
var obj = {
  set foo(_) {
    throw new Error();
  }
};

obj.foo = 1;