tests/snapshot/error/source_locations/expression/assign/set_named_property.exp
Error: 
  ┌ source_locations/expression/assign/set_named_property.js:3:11
  |
3 |     throw new Error();
  |           ^
Stack trace:
  at set foo (source_locations/expression/assign/set_named_property.js:3:11)
  at <global> (source_locations/expression/assign/set_named_property.js:7:4)